srv client added no oop

--- a/cpp_learn_ros2/CMakeLists.txt
+++ b/cpp_learn_ros2/CMakeLists.txt
@@ -33,6 +33,9 @@ ament_target_dependencies(robot_news_subscriber rclcpp example_interfaces)
 add_executable(add_2_ints_srv_server src/add_2_ints_srv_server.cpp)
 ament_target_dependencies(add_2_ints_srv_server rclcpp example_interfaces)
 
+add_executable(add2ints_srv_client_no_oop src/add2ints_srv_client_no_oop.cpp)
+ament_target_dependencies(add2ints_srv_client_no_oop rclcpp example_interfaces)
+
 # install node
 install(TARGETS
    cpp_node
@@ -40,6 +43,7 @@ install(TARGETS
    robot_news_publisher
    robot_news_subscriber
    add_2_ints_srv_server
+   add2ints_srv_client_no_oop
    DESTINATION  lib/${PROJECT_NAME}
 )
 
